--- a/Relazione/RelazioneTesto/0.main.tex
+++ b/Relazione/RelazioneTesto/0.main.tex
@@ -47,7 +47,7 @@
     {\Large Sessione autunnale 2020/2021\par}
     \vspace{5cm}
 
-    \begin{tabular}{1}
+    \begin{tabular}{l}
         \large Matteo Pulcinelli \par \\
         \large Matricola: 293473 \par \\
     \end{tabular}
