--- a/Relazione/RelazioneTesto/1.analisiRequisiti.tex
+++ b/Relazione/RelazioneTesto/1.analisiRequisiti.tex
@@ -1,5 +1,5 @@
 \section{Specifica del problema}
-Si richiede di realizzare un software con interfaccia grafica per la gestione dei clienti. Il software in questione terrà traccia dei clienti e delle varie commissioni
+Si richiede di realizzare un software con interfaccia grafica per sistemi Windows-based che consenta la gestione dei clienti. Il software in questione terrà traccia dei clienti e delle varie commissioni
 associate ad essi. Dei clienti ci interessano nome, cognome, il numero di telefono e email, mentre per ogni commissione ci interessano
 la data di scadenza e la descrizione.
 
@@ -9,13 +9,15 @@ Il software sarà composto da un menù principale con 4 tab
         troviamo la lista delle commissioni con scadenza in settimana e la possibilità di modificare
         e aggiungere commissioni.
         \item \textbf{Rubrica:} In questa schermata troviamo tutti i contatti %aggiungi la possibilià di selezionare un contatto e aggiungere una commissione veloce
-        salvati %possibilità di mandare un'email al volo?
-        \item \textbf{Commissioni:} Qui possiamo visualizzare tutte le commissioni
+        salvati con la possibilità di aggiungerne nuovi o di modificare quelli già presenti. %possibilità di mandare un'email al volo?% 
+        \item \textbf{Commissioni:} Qui possiamo visualizzare tutte le commissioni (completate e non)
         \item \textbf{Scadenze:} In quest'ultima tab verranno mostrate solo le commissioni non ancora completate %??%
 \end{itemize}
 
 
 \medskip
+Il software inoltre offre la possibilità di salvare i dati in locale e anche in formato Json per un eventuale
+salvataggio su database.
 
 
 
