--- a/Relazione/RelazioneTesto/3.AnalisiEProgettazione.tex
+++ b/Relazione/RelazioneTesto/3.AnalisiEProgettazione.tex
@@ -1,9 +1,24 @@
 \section{Analisi e progettazione}
 \subsection{Architettura}
-Per lo sviluppo del software, sono stati creati gli oggetti commissione e cliente in modo da avere un basso accoppiamento (loose coupling) 
-è si è creata una nuova classe statica che va a separare la parte dello storage dei dati più come sono legati. 
-Per farlo, la classe statica contiene due dizionari, uno con un identificativo e il cliente associato e l'altro composto da un identificativo 
-che indica il cliente liste di commissioni.
+
+Per lo sviluppo del software, sono state create le classi commissione e cliente che sono dei semplici modelli
+e al fine di avere un basso accoppiamento (loose coupling) si è creata una nuova classe statica che va a separare la parte 
+dello storage dei dati più come sono legati. 
+Per farlo, la classe statica contiene due dizionari, uno con un identificativo e il cliente associato e l'altro composto da
+ un identificativo che indica il cliente liste di commissioni.
+ \vspace{0.5cm}
+ Per l'architettura sono stati usati 3 pattern:
+\begin{itemize}
+    \item Singleton che garantisce la creazione di una e una sola istanza della classe. Viene usata durante 
+    la fase di salvataggio
+    \item 
+\end{itemize}
+
+ \vspace{0.5cm}
+ polimorfismo
+ \vspace{0.5cm}
+ override e overload
+ \vspace{0.5cm}
 
 
 Per lo sviluppo del gioco è stato utilizzato il design pattern \texttt{MVC} che permette la separazione della logica del gioco dal codice che si occupa della presentazione all'utente.
