rinominate variabili con nomi più attinenti

--- a/Relazione/RelazioneTesto/1.analisiRequisiti.tex
+++ b/Relazione/RelazioneTesto/1.analisiRequisiti.tex
@@ -9,9 +9,10 @@ Il software sarà composto da un menù principale con 4 tab
         troviamo la lista delle commissioni con scadenza in settimana e la possibilità di modificare
         e aggiungere commissioni.
         \item \textbf{Rubrica:} In questa schermata troviamo tutti i contatti %aggiungi la possibilià di selezionare un contatto e aggiungere una commissione veloce
-        salvati con la possibilità di aggiungerne nuovi o di modificare quelli già presenti. %possibilità di mandare un'email al volo?% 
+        salvati con la possibilità di aggiungerne nuovi, modificare quelli già presenti o eliminarli (eliminando le relative commissioni).
         \item \textbf{Commissioni:} Qui possiamo visualizzare tutte le commissioni (completate e non)
-        \item \textbf{Scadenze:} In quest'ultima tab verranno mostrate solo le commissioni non ancora completate %??%
+        \item \textbf{Scadenze:} In quest'ultima tab verranno mostrate solo le commissioni non ancora completate, con la possibilità di eliminare
+
 \end{itemize}
 
 
@@ -20,6 +21,19 @@ Il software inoltre offre la possibilità di salvare i dati in locale e anche in
 salvataggio su database.
 
 
+% Una volta compilati i campi dedicati all'inserimento di un nuovo cliente o di una nuova commissione,
+% Potremmo visualizzare 
+
+
+\medskip
+Ogni elemento, cliente o commissione che sia, può essere visualizzato aggiunto, modificato o eliminato.
+Una volta selezionato un elemento 
+Quando si richiede la modifica, verrà mostrata una schermata dedicata, mentre per quanto concerne l'eliminazione  
+sarà richiesta una conferma prima di eliminare definitivamente l'elemento.
+
+\medskip
+Una volta conclusa la sessione, prima della chiusura del programma, se sono stati apportati cambiamenti non salvati su file,
+il programma notifcherà l'utente. 
 
 Una volta compilati opportunamente i campi della schermata di una nuova partita, verrà mostrata la schermata di gioco con la quale l'utente interagirà.
 Essa sarà composta da un rullante e due bacchette inizialmente alzate. Alla pressione del tasto \textbf{c} e \textbf{n} le bacchette (rispettivamente sinistra e destra) reagiranno all'input dell'utente colpendo il rullante.
