--- a/Relazione/RelazioneTesto/3.AnalisiEProgettazione.tex
+++ b/Relazione/RelazioneTesto/3.AnalisiEProgettazione.tex
@@ -2,23 +2,54 @@
 \subsection{Architettura}
 
 Per lo sviluppo del software, sono state create le classi commissione e cliente che sono dei semplici modelli
-e al fine di avere un basso accoppiamento (loose coupling) si è creata una nuova classe statica che va a separare la parte 
-dello storage dei dati più come sono legati. 
+e, al fine di avere un basso accoppiamento (loose coupling), si è creata una nuova classe statica che va a 
+separare la parte dello storage dei dati  . 
 Per farlo, la classe statica contiene due dizionari, uno con un identificativo e il cliente associato e l'altro composto da
  un identificativo che indica il cliente liste di commissioni.
  \vspace{0.5cm}
  Per l'architettura sono stati usati 3 pattern:
 \begin{itemize}
-    \item Singleton che garantisce la creazione di una e una sola istanza della classe. Viene usata durante 
-    la fase di salvataggio
-    \item 
+    \item Singleton, pattern creazionale che garantisce la creazione di una e una sola istanza della classe.  
+    Viene usata durante la fase di salvataggio (in modo da richiamare sempre la stessa istanza) e per la gestione
+    dei dati interni al programma. 
+
+    Il singleton ci serve per poter implementare un'interfaccia o per estendere un'altra classe avendo quindi i vantaggi di una classe statica.
+    Durante la gestione dei dati interni implementiamo il singleton per poter poi aggiungere un altro pattern che è
+    l'Observer. 
+    \item Composite, pattern strutturale per 
+    \item Observer, pattern comportamentale che consente il sistema basato su eventi. \\
+    Viene usato per notificare a tutte le classi dedite alla rappresentazione che son 
+    stati apportati cambiamenti in locale e devono essere aggiornati. L'approccio usato
+    è di tipo pull, ovvero la classe che notifica non invia dati ma il solo segnale, saranno
+    poi le classi notificate che si occuperanno a recuperare i dati attraverso metodi esposti
+    da parte della classe dedicata alla memoria. \\
+    Il tipo di approccio pull permette una maggiore flessibilità, ogni observer decide cosa 
+    richiedere. \\
+    In genere si usa questo approccio quando ci sono diversi tipi di observer.
 \end{itemize}
+
+\vspace{0.5cm}
+Nell'archiettura del progetto è stato fatto uso di quelle tecniche che contraddistinguono un linguaggio
+ad oggetti come \texttt{C\#}: Incapsulemento, ereditarietà, polimorfismo, eccezioni.
 
  \vspace{0.5cm}
  polimorfismo
  \vspace{0.5cm}
  override e overload
  \vspace{0.5cm}
+
+
+
+Al fine di non sporcare le classi e mantenere ordine nel codice, alcune logiche vengono delegate ad altre classi handler.
+Si è poi fatto uso dell'ereditarietà tra i vari handler, poichè alcune classi differivano solo di pochi metodi: 
+La classe \texttt{HandlerCommissioni} che funge da classe base, viene estesa dalle classi figlie \texttt{HandlerCommissioniTotali},
+\texttt{HandlerCommissioniInScadenza} e \texttt{HandlerCommissioniDaFare}.
+
+Sono state aggiunte alcune classi statiche, ad esempio quelle per il controllo degli input, al fine di non ripetere codice
+inutilmente
+
+
+
 
 
 Per lo sviluppo del gioco è stato utilizzato il design pattern \texttt{MVC} che permette la separazione della logica del gioco dal codice che si occupa della presentazione all'utente.
