--- a/Relazione/RelazioneTesto/1.analisiRequisiti.tex
+++ b/Relazione/RelazioneTesto/1.analisiRequisiti.tex
@@ -7,7 +7,7 @@ Il software sarà composto da un menù principale con 4 tab
 \begin{itemize}
         \item \textbf{Home:} Questa è la schermata principale con cui si apre il software, all'interno
         troviamo la lista delle commissioni con scadenza in settimana e la possibilità di visualizzare, modificare
-        e aggiungere commissioni. Sempre in questa schermata si ha la possibilità di salvare le modifiche appartate.
+        e aggiungere commissioni. Sempre in questa schermata si ha la possibilità di salvare le modifiche apportate.
         \item \textbf{Rubrica:} In questa schermata troviamo tutti i contatti salvati con la possibilità di aggiungerne nuovi, 
         modificare quelli già presenti o eliminarli (eliminando tutte le relative commissioni).
         \item \textbf{Commissioni:} Qui possiamo visualizzare tutte le commissioni (completate e non). Anche qui sono presenti i tasti 
